# service/api/managePost.go
@@ -1,24 +1,174 @@
 package api
 
 import (
+	"encoding/json"
 	"net/http"
+	"strconv"
 
 	"github.com/IceSlanserUni/WASAPhoto/service/api/reqcontext"
 	"github.com/julienschmidt/httprouter"
 )
 
 func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	// Get UserID from the Header
+	UID, authorization, err := SecurityHandler(r, rt)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	if !authorization {
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
+
+	// Get postID from the router
+	postStr := ps.ByName("postID")
+	postID, err := strconv.ParseUint(postStr, 10, 64)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("Failed to parse request body")
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	// Put like
+	likeID, exist, err := rt.db.PutLike(UID, postID)
+	if err != nil {
+		w.WriteHeader(http.StatusNotFound)
+		return
+	}
+	if exist {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	// Responses
+	w.WriteHeader(http.StatusOK)
+	w.Header().Set("Content-Type", "application/json")
+	err = json.NewEncoder(w).Encode(likeID)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
 
 }
 
 func (rt *_router) unlikePhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	// Get UserID from the Header
+	UID, authorization, err := SecurityHandler(r, rt)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	if !authorization {
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
 
+	// Get likeID from the router
+	likeStr := ps.ByName("likeID")
+	likeID, err := strconv.ParseUint(likeStr, 10, 64)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("Failed to parse request body")
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	// Deletelike
+	authorization, err = rt.db.DeleteLike(UID, likeID)
+	if err != nil {
+		w.WriteHeader(http.StatusNotFound)
+		return
+	}
+	if !authorization {
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
+
+	// Responses
+	w.WriteHeader(http.StatusNoContent)
+	w.Header().Set("Content-Type", "application/json")
 }
 
 func (rt *_router) commentPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	// Get UserID from the Header
+	UID, authorization, err := SecurityHandler(r, rt)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	if !authorization {
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
+
+	// Get postID from the router
+	postStr := ps.ByName("postID")
+	postID, err := strconv.ParseUint(postStr, 10, 64)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("Failed to parse request body")
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	// Get text from the router
+	text := ps.ByName("text")
+	if err != nil {
+		ctx.Logger.WithError(err).Error("Failed to parse request body")
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	// Post Comment
+	commentID, err := rt.db.PostComment(UID, postID, text)
+	if err != nil {
+		w.WriteHeader(http.StatusNotFound)
+		return
+	}
+
+	// Responses
+	w.WriteHeader(http.StatusOK)
+	w.Header().Set("Content-Type", "application/json")
+	err = json.NewEncoder(w).Encode(commentID)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
 
 }
 
 func (rt *_router) uncommentPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	// Get UserID from the Header
+	UID, authorization, err := SecurityHandler(r, rt)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	if !authorization {
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
 
+	// Get commentID from the router
+	commentStr := ps.ByName("commentID")
+	commentID, err := strconv.ParseUint(commentStr, 10, 64)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("Failed to parse request body")
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	// Delete comment
+	authorization, err = rt.db.DeleteComment(UID, commentID)
+	if err != nil {
+		w.WriteHeader(http.StatusNotFound)
+		return
+	}
+	if !authorization {
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
+
+	// Responses
+	w.WriteHeader(http.StatusNoContent)
+	w.Header().Set("Content-Type", "application/json")
 }
