# service/api/myProfile.go
@@ -4,18 +4,20 @@ import (
 	"encoding/json"
 	"net/http"
 	"strconv"
+	"time"
 
 	"github.com/IceSlanserUni/WASAPhoto/service/api/reqcontext"
 	"github.com/IceSlanserUni/WASAPhoto/service/utils"
 	"github.com/julienschmidt/httprouter"
 )
 
-// doLogin checks if the user does exist.
-// If the user does exist it'll return the HTTP Status 200 and return the user ID; otherwise, with HTTP Status 201.
+// If the username does not exist, it will create a new profile, and an identifier is returned.
+// If the username exists, the profile identifier is returned.
 func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 	// Get the username from the requestBody
-	username, err := utils.GetUsername(r)
+	username, err := utils.GetMyUsername(r)
 	if err != nil {
+		ctx.Logger.WithError(err).Error("Failed to parse request body")
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
@@ -33,7 +35,7 @@ func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter
 	}
 
 	// User Login
-	user, exist, err := rt.db.LoginUser(username)
+	userID, exist, err := rt.db.LoginUser(username)
 	if err != nil {
 		ctx.Logger.WithError(err).Error("Error during func LoginUser")
 		w.WriteHeader(http.StatusInternalServerError)
@@ -46,24 +48,106 @@ func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter
 		}
 	}
 	w.Header().Set("Content-Type", "application/json")
-	err = json.NewEncoder(w).Encode(user.UserId)
+	err = json.NewEncoder(w).Encode(userID)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
 		return
 	}
 }
 
+// The stream is composed by photos from “following” (other users that the user follows).
 func (rt *_router) getMyStream(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	// Get UserID from the Header
+	UID, authorization, err := SecurityHandler(r, rt)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	if !authorization {
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
+
+	// Get list of following ID
+	following, err := rt.db.GetFollowing(UID)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("Error during func GetFollowing")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	var TimeRange struct {
+		StartTime time.Time `json:"start_time"`
+		EndTime   time.Time `json:"end_time"`
+	}
+
+	err = json.NewDecoder(r.Body).Decode(&TimeRange)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("Failed to parse request body")
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	// Get list of DBPosts
+	DBPosts, err := rt.db.GetPosts(following, TimeRange.StartTime, TimeRange.EndTime)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("Error during func GetPosts")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	// Convert DBPosts to APIPosts
+	var APIPosts []Post
+	for _, dbPost := range DBPosts {
+		APIPost := NewPost(dbPost)
+		APIPosts = append(APIPosts, APIPost)
+	}
+
+	w.WriteHeader(http.StatusOK)
+	w.Header().Set("Content-Type", "application/json")
+	err = json.NewEncoder(w).Encode(APIPosts)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
 
 }
 
+// Get the profile of the user with the given one username in the request.
 func (rt *_router) getUserProfile(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	// Get UserID from the Header
+	UID, authorization, err := SecurityHandler(r, rt)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	if !authorization {
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
 
+	// Get DBUser
+	dbProfile, err := rt.db.GetProfile(UID)
+	if err != nil {
+		w.WriteHeader(http.StatusNotFound)
+		return
+	}
+
+	// Convert DBUser into APIUser
+	userProfile := NewUser(dbProfile)
+	w.WriteHeader(http.StatusOK)
+	w.Header().Set("Content-Type", "application/json")
+	err = json.NewEncoder(w).Encode(userProfile)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
 }
 
+// Set a new username for the current user.
 func (rt *_router) setMyUserName(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	// Get the UserId from the Header
-	uId, authorization, err := SecurityHandler(r, rt)
+	// Get UserID from the Header
+	UID, authorization, err := SecurityHandler(r, rt)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		return
@@ -74,7 +158,7 @@ func (rt *_router) setMyUserName(w http.ResponseWriter, r *http.Request, ps http
 	}
 
 	// Get the new username from the requestBody
-	nname, err := utils.GetUsername(r)
+	nname, err := utils.GetMyUsername(r)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		return
@@ -105,7 +189,7 @@ func (rt *_router) setMyUserName(w http.ResponseWriter, r *http.Request, ps http
 	}
 
 	// Update the Username
-	err = rt.db.SetUsername(uId, nname)
+	err = rt.db.SetUsername(UID, nname)
 	if err != nil {
 		ctx.Logger.WithError(err).Error("Error during func SetUsername")
 		w.WriteHeader(http.StatusInternalServerError)
@@ -113,19 +197,11 @@ func (rt *_router) setMyUserName(w http.ResponseWriter, r *http.Request, ps http
 	}
 	w.WriteHeader(http.StatusOK)
 	w.Header().Set("Content-Type", "application/json")
-	err = json.NewEncoder(w).Encode(uId)
+	err = json.NewEncoder(w).Encode(UID)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
 		return
 	}
-}
-
-func (rt *_router) setMyBiografy(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-
-}
-
-func (rt *_router) setMyPropic(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-
 }
 
 func SecurityHandler(r *http.Request, rt *_router) (uint64, bool, error) {
